--- a/web.html
+++ b/web.html
@@ -57,7 +57,7 @@ Tarun kumar|Home
     </div>
 </div>
 <div class="line"></div><div class="project-div container-wide clearfix">
-    <h2 class="extra-space-32 dark center-text"><a href="http://www.rahulkadyan.com/typo#content">Pure CSS3 Slider</a></h2>
+    <h2 class="extra-space-32 dark center-text"><a href="">Pure CSS3 Slider</a></h2>
     <div class="space"></div>
     <div class="center-text">
         <div class="inline line-height-extra" style="max-width: 800px">
